--- a/templates/record/show.html.twig
+++ b/templates/record/show.html.twig
@@ -15,6 +15,11 @@
             <dt>Tags</dt>
             <dd>{{ item.tags|join(', ') }}</dd>
         </dl>
+        <p>
+            <a href="{{ url('record_index') }}" title="back to the list">
+                back to the list
+            </a>
+        </p>
     {% else %}
         <p>
             Record not found.
