--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,13 +10,7 @@
 </head>
 <body>
 <div class="container-fluid">
-    {% for type, messages in app.session.flashBag.all %}
-        {% for message in messages %}
-            <div class="alert alert-{{ type }}" role="alert">
-                {{ message|trans }}
-            </div>
-        {% endfor %}
-    {% endfor %}
+    {% include 'default/_flash_messages.html.twig' %}
     {% block body %}{% endblock %}
 </div>
 {% block javascripts %}
