--- a/templates/categories/edit.html.twig
+++ b/templates/categories/edit.html.twig
@@ -9,16 +9,14 @@
         <h1>{{ 'virtual_note'|trans }}</h1>
     {% endblock %}
 
-    <h1>{{ 'title_categories_edit'|trans({'%id%': categories.id|default('')}) }}</h1>
-    {{ form_start(form, { method: 'PUT', action: url('categories_edit', {id: categories.id}) }) }}
-    {{ form_widget(form) }}
-    <div class="form-group row float-sm-right">
-        <input type="submit" value="{{ 'action_save'|trans }}" class="btn btn-primary" />
-    </div>
-    <div class="form-group row float-sm-left">
-        <a href="{{ url('categories_index') }}" class="btn btn-link">
-            {{ 'button_back'|trans }}
-        </a>
-    </div>
-    {{ form_end(form) }}
+    {% include 'default/_form.html.twig' with {
+        page_title: 'title_categories_edit',
+        page_title_param: {'%id%': categories.id},
+        attr: {
+            method: 'PUT',
+            action: url('categories_edit', {'id': categories.id}),
+        },
+        form: form,
+        back_to_list_path: 'categories_index',
+    } %}
 {% endblock %}
