--- a/templates/notes/index.html.twig
+++ b/templates/notes/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ 'title_task_list'|trans }}
+    {{ 'title_notes_list'|trans }}
 {% endblock %}
 
 {% block body %}
@@ -26,6 +26,7 @@
                 <th>{{ knp_pagination_sortable(pagination, 'label_id'|trans, 'notes.id') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label_title'|trans, 'notes.title') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label_description'|trans, 'notes.description') }}</th>
+                <th>{{ knp_pagination_sortable(pagination, 'label_created_at'|trans, 'notes.createdAt') }}</th>
                 <th>{{ 'label_category'|trans }}</th>
                 <th>{{ 'label_actions'|trans }}</th>
             </tr>
@@ -36,10 +37,20 @@
                     <td>{{ notes.id }}</td>
                     <td>{{ notes.title }}</td>
                     <td>{{ notes.description }}</td>
+                    <td>{{ notes.createdAt|format_date('long') }}</td>
                     <td>{{ notes.categories.name }}</td>
                     <td>
                         <a href="{{ url('notes_show', {id: notes.id}) }}" title="{{ 'button_view'|trans }}">
                             {{ 'button_view'|trans }}
+                        </a>
+                        <a href="{{ url('notes_edit', {id: notes.id}) }}" title="{{ 'button_edit'|trans }}">
+                            {{ 'button_edit'|trans }}
+                        </a>
+                        <a href="{{ url('notes_create', {id: notes.id}) }}" title="{{ 'button_create'|trans }}">
+                            {{ 'button_create'|trans }}
+                        </a>
+                        <a href="{{ url('notes_delete', {id: notes.id}) }}" title="{{ 'button_delete'|trans }}">
+                            {{ 'button_delete'|trans }}
                         </a>
                     </td>
                 </tr>
