--- a/templates/notes/show.html.twig
+++ b/templates/notes/show.html.twig
@@ -18,6 +18,8 @@
             <dd>{{  notes.title }}</dd>
             <dt>{{ 'label_description'|trans }}</dt>
             <dd>{{  notes.description }}</dd>
+            <dt>{{ 'label_updated_at'|trans }}</dt>
+            <dd>{{ notes.createdAt|format_date('long') }}</dd>
             <dt>{{ 'label_category'|trans }}</dt>
             <dd>{{  notes.categories.name }}</dd>
         </dl>
