--- a/templates/todolist/index.html.twig
+++ b/templates/todolist/index.html.twig
@@ -25,6 +25,7 @@
             <tr>
                 <th>{{ knp_pagination_sortable(pagination, 'label_id'|trans, 'to_do_list.id') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label_title'|trans, 'to_do_list.title') }}</th>
+                <th>{{ 'label_tags'|trans }}</th>
                 <th>{{ 'label_actions'|trans }}</th>
             </tr>
             </thead>
@@ -34,9 +35,35 @@
                     <td>{{ to_do_list.id }}</td>
                     <td>{{ to_do_list.title }}</td>
                     <td>
+                        {% if to_do_list.tags is defined and to_do_list.tags|length %}
+                            {% for tags in to_do_list.tags %}
+                                <a href="{{ url('todolist_index', {'filters.tags_id' : tags.id}) }}" title="{{ tags.name }}">
+                                    {{ tags.name }}
+                                </a>
+                            {% endfor %}
+                        {% else %}
+                            Brak tagu.
+                        {% endif %}
+                    </td>
+                    <td>
+                        {% if is_granted('VIEW', to_do_list) %}
                         <a href="{{ url('todolist_show', {id: to_do_list.id}) }}" title="{{ 'button_view'|trans }}">
                             {{ 'button_view'|trans }}
                         </a>
+                        {% endif %}
+                        {% if is_granted('EDIT', to_do_list) %}
+                            <a href="{{ url('todolist_edit', {id: to_do_list.id}) }}" title="{{ 'button_edit'|trans }}">
+                                {{ 'button_edit'|trans }}
+                            </a>
+                        {% endif %}
+                        <a href="{{ url('todolist_create', {id: to_do_list.id}) }}" title="{{ 'button_create'|trans }}">
+                            {{ 'button_create'|trans }}
+                        </a>
+                        {% if is_granted('DELETE', to_do_list) %}
+                            <a href="{{ url('todolist_delete', {id: to_do_list.id}) }}" title="{{ 'button_delete'|trans }}">
+                                {{ 'button_delete'|trans }}
+                            </a>
+                        {% endif %}
                     </td>
                 </tr>
             {% endfor %}
