--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    {% if is_granted('ROLE_USER') %}
     <nav id="menu">
         <ul class="nav justify-content-center">
             <li class="nav-item">
@@ -13,6 +14,36 @@
             <li class="nav-item">
                 <a href="{{ url('categories_index') }}"><button type="button" class="btn btn-light">Kategorie</button></a>
             </li>
+            <li class="nav-item">
+                <a href="{{ url('tags_index') }}"><button type="button" class="btn btn-light">Tagi</button></a>
+            </li>
+            {% if is_granted('ROLE_ADMIN') %}
+            <li class="nav-item">
+                <a href="{{ url('users_index') }}" title="users list"><button type="button" class="btn btn-light">{{ 'title_users_list'|trans }}</button></a>
+            </li>
+            {% endif %}
+            </li>
+            <li class="nav-item">
+            {% if app.user %}
+                <a href="{{ url('users_show', {id: app.user.id}) }}" title="show user"><button type="button" class="btn btn-light">{{ app.user.username }}</button></a>
+                <ul>
+                    <li><a href="{{ url('users_edit', {id: app.user.id}) }}"><button type="button" class="btn btn-light">{{ 'button_user_edit'|trans }}</button></a></li>
+                    <li><a href="{{ path('app_logout') }}"><button type="button" class="btn btn-light">{{ 'button_log_out'|trans }}</button></a></li>
+                </ul>
+            {% endif %}
+            </li>
         </ul>
     </nav>
+    {% else %}
+    <nav id="menu">
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a href="{{ url('app_login') }}"><button type="button" class="btn btn-light">Zaloguj</button></a>
+            </li>
+            <li class="nav-item">
+                <a href="{{ url('registration_register') }}"><button type="button" class="btn btn-light">Zarejestruj</button></a>
+            </li>
+        </ul>
+    </nav>
+    {% endif %}
 {% endblock %}
