--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -6,19 +6,9 @@
 
 {% block body %}
     {{ include('menu.html.twig') }}
-    <div id="art">
-        <article id="artindex">
-            <h1>Aby móc w pełni korzystać z aplikacji zaloguj się lub zarejestruj!</h1>
-            <br>
-            <p>
-                Strona pozwala na zarządzanie swoimi notatkami oraz zadaniami.<br>
-                Po zalogowaniu będziesz mógł/mogła:<br>
-                &#10004;  w pełni korzystać z funckji tworzenia notatek oraz zadań<br>
-                &#10004;  edytować oraz usuwać notatki lub zadania<br>
-                &#10004;  przypisywać kategorie oraz tagi<br>
-                <br>
-                <b>Zapraszam do korzystania!</b>
-            <br><br>
+    <div>
+        <article>
+            <h1>Załóż konto, żeby korzystać z Wirtualnego Notatnika.</h1>
         </article>
     </div>
 {% endblock %}
