--- a/templates/notes/index.html.twig
+++ b/templates/notes/index.html.twig
@@ -7,7 +7,6 @@
 {% block body %}
     {{ include('menu.html.twig') }}
 
-    <h1>{{ 'title_note_list'|trans }}</h1>
     {% if pagination is defined and pagination.items|length %}
 
         <div class="navigation text-center">
@@ -18,7 +17,7 @@
             <h1>{{ 'virtual_note'|trans }}</h1>
         {% endblock %}
 
-        <h2>{{ 'title_task_list'|trans }}</h2>
+        <h1>{{ 'title_note_list'|trans }}</h1>
 
         <table class="table table-striped">
             <thead>
@@ -28,6 +27,7 @@
                 <th>{{ knp_pagination_sortable(pagination, 'label_description'|trans, 'notes.description') }}</th>
                 <th>{{ knp_pagination_sortable(pagination, 'label_created_at'|trans, 'notes.createdAt') }}</th>
                 <th>{{ 'label_category'|trans }}</th>
+                <th>{{ 'label_tags'|trans }}</th>
                 <th>{{ 'label_actions'|trans }}</th>
             </tr>
             </thead>
@@ -42,6 +42,17 @@
                         <a href="{{ url('notes_index', {'filters.categories_id' : notes.categories.id}) }}" title="{{ notes.categories.name }}">
                             {{ notes.categories.name }}
                         </a>
+                    </td>
+                    <td>
+                        {% if notes.tags is defined and notes.tags|length %}
+                            {% for tags in notes.tags %}
+                                <a href="{{ url('notes_index', {'filters.tags_id' : tags.id}) }}" title="{{ tags.name }}">
+                                    {{ tags.name }}
+                                </a>
+                            {% endfor %}
+                        {% else %}
+                            &nbsp;
+                        {% endif %}
                     </td>
                     <td>
                         {% if is_granted('VIEW', notes) %}
