--- a/templates/todolist/show.html.twig
+++ b/templates/todolist/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ 'title_task_details'|trans({'%id%': to_do_list.id|default('')}) }}
+    {{ 'title_task_details'|trans({'%id%': todolist.id|default('')}) }}
 {% endblock %}
 
 {% block body %}
@@ -9,13 +9,13 @@
         <h1>{{ 'virtual_note'|trans }}</h1>
     {% endblock %}
 
-    <h2>{{ 'title_task_details'|trans({'%id%': to_do_list.id|default('')}) }}</h2>
-    {% if to_do_list is defined and to_do_list|length %}
+    <h2>{{ 'title_task_details'|trans({'%id%': todolist.id|default('')}) }}</h2>
+    {% if todolist is defined and todolist|length %}
         <dl>
             <dt>{{ 'label_id'|trans }}</dt>
-            <dd>{{ to_do_list.id }}</dd>
+            <dd>{{ todolist.id }}</dd>
             <dt>{{ 'label_title'|trans }}</dt>
-            <dd>{{  to_do_list.title }}</dd>
+            <dd>{{  todolist.title }}</dd>
         </dl>
         <p>
             <a href="{{ url('todolist_index') }}" title="back to the list">
