--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -17,7 +17,7 @@
             form: form,
             submit_label: 'action_edited'|trans,
             message: 'message_updated_successfully'|trans,
-            back_to_list_path: 'users_index',
+            back_to_list_path: 'notes_index',
         } %}
     {% else %}
         {% include 'default/_form.html.twig' with {
