--- a/templates/todolist/delete.html.twig
+++ b/templates/todolist/delete.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ 'title_todolist_delete'|trans({'%id%': to_do_list.id|default('')}) }}
+    {{ 'title_todolist_delete'|trans({'%id%': todolist.id|default('')}) }}
 {% endblock %}
 
 {% block body %}
@@ -11,10 +11,10 @@
 
     {% include 'default/_form.html.twig' with {
         page_title: 'title_todolist_delete',
-        page_title_param: {'%id%': to_do_list.id},
+        page_title_param: {'%id%': todolist.id},
         attr: {
             method: 'DELETE',
-            action: url('todolist_delete', {'id': to_do_list.id}),
+            action: url('todolist_delete', {'id': todolist.id}),
         },
         form: form,
         submit_label: 'action_delete'|trans,
